# bon

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  README.v3.md  debug.sh  package-lock.json  package.json  release-plz.toml  rust-toolchain.toml  shell.nix  taplo.toml
bon/: CHANGELOG.md  Cargo.toml
bon-cli/: Cargo.toml
bon-cli/src/: main.rs
bon-macros/: CHANGELOG.md  Cargo.toml  README.md
bon-macros/src/: bon.rs  error.rs  lib.rs  map.rs  privatize.rs  set.rs  tests.rs
bon-macros/src/builder/: field.rs  free_fn_item.rs  func_input.rs  impl_block.rs  item_enum.rs  item_fn.rs  item_func.rs  item_impl.rs  item_struct.rs  mod.rs  normalization.rs  params.rs  setter_methods.rs  shared.rs
bon-macros/src/builder/builder_gen/: auto_into.rs  build_from.rs  builder_decl.rs  builder_derives.rs  builder_params.rs  field.rs  finish_fn.rs  generic_setters.rs  getter.rs  getters.rs  input_enum.rs  input_fn.rs  input_func.rs  input_struct.rs  member.rs  mod.rs  models.rs  setter_methods.rs  start_fn.rs  state_mod.rs
bon-macros/src/builder/builder_gen/builder_derives/: clone.rs  debug.rs  into.rs  into_future.rs  mod.rs
bon-macros/src/builder/builder_gen/builder_params/: mod.rs  on_params.rs
bon-macros/src/builder/builder_gen/input_fn/: mod.rs  validation.rs
bon-macros/src/builder/builder_gen/member/: into_conversion.rs  mod.rs  named.rs  params.rs
bon-macros/src/builder/builder_gen/member/config/: blanket.rs  docs_utils.rs  getter.rs  mod.rs  setter_closure.rs  setters.rs
bon-macros/src/builder/builder_gen/member/params/: blanket.rs  mod.rs  setter.rs  setter_closure.rs  setters.rs
bon-macros/src/builder/builder_gen/setters/: mod.rs
bon-macros/src/builder/builder_gen/top_level_config/: generics.rs  mod.rs  on.rs
bon-macros/src/builder/builder_gen/top_level_params/: mod.rs  on_params.rs
bon-macros/src/collections/: map.rs  mod.rs  set.rs
bon-macros/src/error/: mod.rs  panic_context.rs
bon-macros/src/normalization/: cfg.rs  generics_namespace.rs  impl_traits.rs  lifetimes.rs  mod.rs  self_ty.rs
bon-macros/src/normalization/cfg/: mod.rs  parse.rs  visit.rs
bon-macros/src/parsing/: bon_crate_path.rs  const_.rs  docs.rs  item_params.rs  item_sig.rs  mod.rs  simple_closure.rs  spanned_key.rs
bon-macros/src/tests/: attr_setters.rs  mod.rs
bon-macros/src/util/: attrs.rs  expand_cfg.rs  expr.rs  fn_arg.rs  ide.rs  ident.rs  iterator.rs  meta_list.rs  mod.rs  parse.rs  parsing.rs  path.rs  punctuated.rs  ty.rs  vec.rs  visibility.rs
bon-macros/src/util/ty/: match_types.rs  mod.rs
bon-macros/tests/snapshots/: bon_incomplete_if.rs  setters_docs_and_vis.rs
bon/src/: builder_state.rs  collections.rs  lib.rs  private.rs
bon/src/__/: better_errors.rs  derives.rs  ide.rs  mod.rs  warnings.rs
bon/src/__private/: ide.rs
bon/src/examples/: comprehensive.rs  minimal.rs  mod.rs
bon/src/private/: deprecations.rs  derives.rs  ide.rs  member.rs  member_cell.rs  mod.rs  state.rs
bon/tests/integration/: builder_on_enum.rs  builder_on_fn.rs  builder_on_struct.rs  main.rs
bon/tests/integration/builder/: attr_bon.rs  attr_builder.rs  attr_const.rs  attr_crate.rs  attr_default.rs  attr_derive.rs  attr_expose_positional_fn.rs  attr_field.rs  attr_get.rs  attr_getter.rs  attr_into.rs  attr_into_future.rs  attr_on.rs  attr_overwritable.rs  attr_required.rs  attr_setters.rs  attr_skip.rs  attr_top_level_start_fn.rs  attr_transparent.rs  attr_with.rs  build_from.rs  builder_derives.rs  cfgs.rs  generics.rs  generics_setters.rs  init_order.rs  legacy.rs  lints.rs  many_params.rs  mod.rs  name_conflicts.rs  native_fields.rs  orig_fn_naming.rs  positional_members.rs  raw_idents.rs  smoke.rs  target_feature.rs  track_caller.rs
bon/tests/integration/builder/attr_with/: from_iter.rs  mod.rs  multi_arg.rs  overwritable.rs  single_arg.rs  some.rs
bon/tests/integration/builder/name_conflicts/: builder_state.rs  generics.rs  member_names_state.rs  mod.rs
bon/tests/integration/builder_on_fn/: expose_positional_fn.rs
bon/tests/integration/ui/: mod.rs
bon/tests/integration/ui/compile_fail/: attr_bon.rs  attr_bon.stderr  attr_builder.rs  attr_builder.stderr  attr_const.rs  attr_const.stderr  attr_crate.rs  attr_crate.stderr  attr_derive.rs  attr_derive.stderr  attr_field.rs  attr_field.stderr  attr_getter.rs  attr_getter.stderr  attr_into_future.rs  attr_into_future.stderr  attr_on.rs  attr_on.stderr  attr_required.stderr  attr_setters.rs  attr_setters.stderr  attr_skip.stderr  attr_start_finish_fn.rs  attr_start_finish_fn.stderr  attr_top_level_start_finish_fn.rs  attr_top_level_start_finish_fn.stderr  attr_transparent.rs  attr_transparent.stderr  attr_with.rs  attr_with.stderr  builder_derives.rs  builder_derives.stderr  destructuring.rs  destructuring.stderr  diagnostic_on_unimplemented.stderr  errors.rs  errors.stderr  generics_setters.rs  generics_setters.stderr  invalid_setters_attr.rs  (+18 more)
bon/tests/integration/ui/compile_fail/generics_setters/: array.rs  array.stderr  assoc_type.rs  assoc_type.stderr  fn_pointer.rs  fn_pointer.stderr  interdependent_bounds.rs  interdependent_bounds.stderr  interdependent_param_bounds.rs  interdependent_param_bounds.stderr  option.rs  option.stderr  qualified_path.rs  raw_pointer.rs  (+4 more)
buildy-macros/: Cargo.toml
buildy-macros/src/: builder.rs  lib.rs
buildy-macros/src/builder/: error_handling.rs  mod.rs  normalization.rs
e2e-tests/: Cargo.toml  build.rs
e2e-tests/benches/: criterion.rs  iai.rs
e2e-tests/src/: lib.rs  macro_rules_wrapper_test.rs  missing_docs_test.rs  private_bounds_test.rs  reexports.rs  state_mod_pub.rs  v3_design.rs
e2e-tests/src/benchmark/: base_5.rs  best.rs  best_abstracted.rs  mod.rs  typed_dyn_internal.rs
prox/: Cargo.toml
prox/src/: attrs.rs  entrypoint.rs  expr_ext.rs  fn_arg_ext.rs  ident_ext.rs  lib.rs  path_ext.rs  printing.rs  type_ext.rs  visibility_ext.rs
prox/src/test/: mod.rs  snapshot.rs
sandbox/: Cargo.toml
sandbox/src/: lib.rs
website/doctests/: Cargo.toml  build.rs
website/doctests/src/: lib.rs
(+313 files in other folders)
