[package]
name    = "bon-cli"
version = "0.1.0"

description = "Dev tool for working with the `bon` crate"

edition    = "2021"
homepage   = "https://elastio.github.io/bon/"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/elastio/bon"

publish = false

[[bin]]
doc  = false
name = "bon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow       = "1.0"
ra_ap_parser = "=0.0.233"
ra_ap_syntax = "=0.0.233"
walkdir      = "2.5"
