[package]
name    = "bon-cli"
version = "3.4.0"

description = "Dev tool for working with the `bon` crate"

edition    = "2021"
homepage   = "https://bon-rs.com/"
license    = "MIT OR Apache-2.0"
repository = "https://github.com/elastio/bon"

publish = true

[[bin]]
doc  = false
name = "bon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow       = "1.0"
ra_ap_parser = "=0.0.268"
ra_ap_syntax = "=0.0.268"
walkdir      = "2.5"
