[package]
name = "bon-macros"

description = """
This is a proc-macro crate that is supposed to be a private implementation
detail of the `bon` crate
"""

edition    = { workspace = true }
homepage   = { workspace = true }
license    = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[package.metadata.docs.rs]
all-features = true

# Generate clickable links in the source code view in the docs
rustdoc-args = ["--generate-link-to-definition"]

# We don't need the docs to be built for every first-tier target.
# This crate is not platform-specific.
targets = ["x86_64-unknown-linux-gnu"]

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]

# Patch version 0.20.7 of darling added `flatten` feature. We use it, so we
# need to specify an explicit patch version requirement
darling = "0.20.10"

# This dependency is used by `darling` itself, so we use it as well for case
# conversions to share the same dependency.
ident_case = "1.0"

proc-macro2 = "1.0"
quote       = "1.0"
syn         = { version = "2.0", features = ["full", "visit-mut", "visit"] }
