[package]
name = "bon"

description = "Batteries-included tools for building and reshaping Rust data structures"

edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
bon-macros = { workspace = true }

[dev-dependencies]
expect-test = "1.5"
tokio       = { version = "1.0", features = ["macros", "rt-multi-thread"] }
trybuild    = "1.0"
