[package]
name = "bon"

description = "Generate builders for everything!"

categories = ["rust-patterns", "data-structures", "asynchronous"]
keywords   = ["builder", "macro", "derive", "constructor", "setter"]

edition    = { workspace = true }
homepage   = { workspace = true }
repository = { workspace = true }
version    = { workspace = true }

[lints]
workspace = true

[dependencies]
bon-macros = { workspace = true }

[dev-dependencies]
expect-test = "1.5"
tokio       = { version = "1.0", features = ["macros", "rt-multi-thread"] }
trybuild    = "1.0"
