[package]
name = "buildy-macros"

edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[lib]
proc_macro = true

[dependencies]
darling     = { workspace = true }
heck        = { workspace = true }
itertools   = { workspace = true }
proc-macro2 = { workspace = true }
prox        = { workspace = true }
quote       = { workspace = true }
syn         = { workspace = true, features = ["visit-mut"] }
