[package]
name = "e2e-tests"

publish = false

description = """
    Crate for manual end-to-end testing the `bon` crate. For example it's used to check
    the quality of the documentation produced by `cargo doc` for the macro-generated
    APIs.

    We also use this crate to test the code examples in the documentation in the `website`.
"""

edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[[bench]]
harness = false
name    = "criterion"

[[bench]]
harness = false
name    = "iai"

[dependencies]
bon = { workspace = true }

[dev-dependencies]
buildstructor = "0.5"
criterion     = "0.5"
iai = "0.1"

[build-dependencies]
heck      = { workspace = true }
itertools = { workspace = true }
walkdir   = "2.5"
