[package]
name    = "e2e-tests"
version = "0.1.0"

publish = false

description = """
    Crate for manual end-to-end testing the `bon` crate. For example it's used to check
    the quality of the documentation produced by `cargo doc` for the macro-generated
    APIs.

    We also use this crate to test the code examples in the documentation in the `website`.
"""

edition = "2021"

[lints]
workspace = true

[dependencies]
bon = { path = "../bon" }

[dev-dependencies]
anyhow                = "1.0"
buildstructor         = "0.5"
macro_rules_attribute = "0.2"

[build-dependencies]
itertools  = "0.13"
lazy-regex = "3.3"
walkdir    = "2.5"
