[package]
name = "prox"

description = """
Various utilities for proc macros aggregated in one place
"""

edition = { workspace = true }
version = { workspace = true }

[lints]
workspace = true

[dependencies]
darling      = { workspace = true }
easy-ext     = { workspace = true }
heck         = { workspace = true }
prettyplease = { workspace = true }
proc-macro2  = { workspace = true }
quote        = { workspace = true }
syn          = { workspace = true }
